--- a/css/medium.css
+++ b/css/medium.css
@@ -1,14 +1,16 @@
-@media  screen and (max-width: 48em){
-    .icono{
-        display: flex;
-        justify-content: center;
-        height: 70px;
-        align-items: center;
-        color: lightcoral;
-        background: blueviolet;
-        padding: 20px;
-        z-index: 100;
-        cursor: pointer;
-        margin-right: 40px;
-    }
-    }
+@media only screen and (min-width: 32.5em) {
+	.navigation {
+		display: flex;
+	}
+	.navigation li {
+		display: block; /* change state in small view */
+		flex: 1 1 auto;
+	}
+	.navigation a {
+		text-align: center;
+	}
+	
+	.navigation li:first-child {
+		display: none;
+	}
+}
