--- a/css/small.css
+++ b/css/small.css
@@ -37,7 +37,7 @@ header nav{
 
 nav .logo{
     height: 100%;
-    background-color: royalblue;
+    background-color: #00b9adb2;
  
 }
 nav .logo img{
@@ -51,7 +51,7 @@ nav .logo img{
 nav {
 	margin: 0 auto;
 	max-width: 100%;
-	background-color: tomato;
+	background-color: #06a77cd3;
 }
 .navigation {
 	list-style: none;
@@ -89,7 +89,7 @@ nav {
 
 header .textos{
     text-align: center;
-    color: #fff;
+    color: #022b3a;
     margin-top: 150px;
 }
 
@@ -105,3 +105,46 @@ header .textos h2{
     font-weight: 600;
 
 }
+
+/*main*/
+
+.box {
+    display: grid;
+    width: 70%;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
+    margin: 0 auto;
+}
+
+.contain {
+    height: 300px;
+    margin: 0 auto;
+}
+
+.image{
+    width: 100%;
+    width: 100%;
+}
+
+/*Forecast code*/
+
+table {
+    margin: auto;
+}
+
+td, th {
+    border: rgb(116, 15, 74) solid;
+    margin: auto;
+    padding: 5px;
+ 
+}
+
+.img1 {
+  display: block;  
+margin: auto;
+}
+
+footer {
+        max-width: 900px;
+        margin: 0 auto;
+    }
