--- a/css/medium.css
+++ b/css/medium.css
@@ -13,4 +13,11 @@
 	.navigation li:first-child {
 		display: none;
 	}
+
+
+	.box{ display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 1fr 1fr;
+		grid-gap: 20px;
+	}
 }
