--- a/css/small.css
+++ b/css/small.css
@@ -117,14 +117,17 @@ border: 10px;
 width: 100%;
 margin: auto;
 text-align: center;
+background-color: rgb(11, 116, 116);
+padding: 40px;
 
 }
 
 .contain {
     width: 100%;
     height: 300px;
-    margin: 0 auto;
+    margin: 25px auto;
     padding: 20px;
+    border: black solid;
 }
 
 .image{
@@ -169,7 +172,7 @@ text-align: center;
 }
 
 .weather-icon{
-    width: ;
+    
     height: 128px;
     margin: auto;
 }
@@ -180,7 +183,7 @@ text-align: center;
 }
 
 .temperature-value{
-    width: ;
+    
     height:60px;
 }
 
