--- a/css/small.css
+++ b/css/small.css
@@ -124,7 +124,7 @@ padding: 40px;
 
 .contain {
     width: 100%;
-    height: 300px;
+    height: auto;
     margin: 25px auto;
     padding: 20px;
     border: black solid;
@@ -136,34 +136,6 @@ padding: 40px;
 }
 
 /*Weather information */
-
-.app-title{
-    text-align: center;
-
-    height: 50px;
-    border-radius: 10px 10px 0 0;
-}
-
-.app-title p{
-    text-align: center;
-    padding: 15px;
-    margin: 0 auto;
-    font-size: 1.2em;
-    color: #293251;
-}
-
-.notification{
-    background-color: #f8d7da;
-    display: none;
-}
-
-.notification p{
-    color: #721c24;
-    font-size: 1.2em;
-    margin: 0;
-    text-align: center;
-    padding: 10px 0;
-}
 
 .weather-container{
     width: 100%;
