--- a/css/small.css
+++ b/css/small.css
@@ -139,13 +139,13 @@ padding: 40px;
 
 .weather-container{
     width: 100%;
-    height: 300px;
+    height: auto;
     background-color: rgb(215, 228, 245);
 }
 
 .weather-icon{
     
-    height: 128px;
+    height: auto;
     margin: auto;
 }
 
@@ -156,7 +156,7 @@ padding: 40px;
 
 .temperature-value{
     
-    height:60px;
+    height: auto;
 }
 
 .temperature-value p{
@@ -184,10 +184,10 @@ padding: 40px;
 
 .location p{
     margin: 0;
-    padding: 0;
+    padding: 8px;
     color: #293251;
     text-align: center;
-    font-size: 0.8em;
+    font-size: 1.5em;
 }
 
     footer div{
