--- a/css/small.css
+++ b/css/small.css
@@ -135,12 +135,22 @@ padding: 40px;
     height: 100%;
 }
 
+.box1{
+    width: 75%;
+    height: auto;
+    margin: 25px auto;
+    text-align: center;
+    
+}
+
 /*Weather information */
 
 .weather-container{
     width: 100%;
     height: auto;
     background-color: rgb(215, 228, 245);
+    border-radius: 10px;
+
 }
 
 .weather-icon{
