--- a/css/small.css
+++ b/css/small.css
@@ -211,3 +211,79 @@ padding: 40px;
         margin: 0 auto;
 
         }
+
+        /*css for form*/
+
+        .contenedorform .form .form-header .form-title {
+
+            font-weight: normal;
+            font-family: Arial, Helvetica, sans-serif;
+            color: #ff851b;
+            text-align: center;
+            padding: 14px 0;
+
+        }
+        .contenedorform .form .form-header .form-title span {
+        color: #fff;
+        }
+
+        .contenedorform .form {
+            background: rgba(0,0,0,6);
+            width: 90%;
+            max-width: 650px;
+            margin: auto;
+            padding: 5px 35px;
+            margin-top: 30px;
+            padding-bottom: 30px;
+            border-radius: 3px;
+        }
+
+        .contenedorform .form .form-label {
+            display: block;
+            color: #ff851b;
+            font-size: 16px;
+            font-family: Roboto;
+            position: relative;
+        }
+
+        .contenedorform .form .form-input, .form-textarea{
+            background: rgba(0,0,0,.7);
+            border: none;
+            outline: none;
+            border-bottom: 2px solid #ff851b;
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 20px;
+            border-radius: 2px;
+            font-size: 14px;
+            color: #fff;
+            font-family: Roboto;
+
+        }
+
+        .contenedorform .form-input, .form-textarea{
+            resize: vertical;
+            max-height: 150px;
+            min-height: 50px;
+        }
+
+        .contenedorform .form .btn-sumit {
+            width: 100%;
+            font-family: Roboto;
+            outline: none;
+            background: #ff851b;
+            font-size: 16px;
+            border: none;
+            color: #fff;
+            padding: 15px 0;
+            cursor: pointer;
+            transition: all .5s ease;
+        }
+
+        .contenedorform .form .btn-sumit:hover {
+            background: #f29178;
+
+        }
+
+
+
