--- a/css/small.css
+++ b/css/small.css
@@ -214,20 +214,24 @@ padding: 40px;
 
         /*css for form*/
 
-        .contenedorform .form .form-header .form-title {
+        
+
+        .contenedorform{
 
             font-weight: normal;
             font-family: Arial, Helvetica, sans-serif;
             color: #ff851b;
             text-align: center;
-            padding: 14px 0;
+            padding: 50px 0;
 
         }
-        .contenedorform .form .form-header .form-title span {
-        color: #fff;
+       .form-title {
+        color: rgb(185, 103, 103);
+        font-size: x-large;
+        padding: 40px 20px;
         }
 
-        .contenedorform .form {
+        .form {
             background: rgba(0,0,0,6);
             width: 90%;
             max-width: 650px;
@@ -238,7 +242,7 @@ padding: 40px;
             border-radius: 3px;
         }
 
-        .contenedorform .form .form-label {
+        .form-label {
             display: block;
             color: #ff851b;
             font-size: 16px;
@@ -246,7 +250,7 @@ padding: 40px;
             position: relative;
         }
 
-        .contenedorform .form .form-input, .form-textarea{
+       .form-input {
             background: rgba(0,0,0,.7);
             border: none;
             outline: none;
@@ -261,26 +265,26 @@ padding: 40px;
 
         }
 
-        .contenedorform .form-input, .form-textarea{
+      .form-textarea{
             resize: vertical;
             max-height: 150px;
             min-height: 50px;
         }
 
-        .contenedorform .form .btn-sumit {
+       #boton{
             width: 100%;
             font-family: Roboto;
             outline: none;
             background: #ff851b;
-            font-size: 16px;
+            font-size: 20px;
             border: none;
-            color: #fff;
+            color: rgb(235, 225, 225);
             padding: 15px 0;
             cursor: pointer;
             transition: all .5s ease;
         }
 
-        .contenedorform .form .btn-sumit:hover {
+        #boton:hover {
             background: #f29178;
 
         }
