--- a/css/large.css
+++ b/css/large.css
@@ -3,4 +3,8 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
 }
+.box2 { display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
 }
