--- a/css/medium.css
+++ b/css/medium.css
@@ -19,4 +19,8 @@
 		grid-template-columns: 1fr 1fr;
 		grid-gap: 20px;
 	}
+	.box2{ display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 20px;
+	}
 }
