--- a/css/small.css
+++ b/css/small.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Sen', sans-serif;;
     font-size: 16px;
     
 }
@@ -212,7 +212,7 @@ padding: 40px;
         text-align: center;
         padding: 10px;
         background-color: rgb(11, 116, 116);
-        font-family: 'Trade Winds' ;
+        font-family: 'Comic Neue', cursive;
         color: honeydew;
         max-width: 100%;
         margin: 0 auto;
@@ -253,8 +253,8 @@ padding: 40px;
         .form-label {
             display: block;
             color: #ff851b;
-            font-size: 16px;
-            font-family: Roboto;
+            font-size: 20px;
+            font-family: 'Comic Neue', cursive;
             position: relative;
         }
 
@@ -267,9 +267,9 @@ padding: 40px;
             padding: 12px;
             margin-bottom: 20px;
             border-radius: 2px;
-            font-size: 14px;
+            font-size: 20px;
             color: #fff;
-            font-family: Roboto;
+            font-family: 'Comic Neue', cursive;
 
         }
 
@@ -281,7 +281,7 @@ padding: 40px;
 
        #boton{
             width: 100%;
-            font-family: Roboto;
+            font-family: 'Comic Neue', cursive;
             outline: none;
             background: #ff851b;
             font-size: 20px;
