--- a/css/small.css
+++ b/css/small.css
@@ -296,6 +296,13 @@ padding: 40px;
             background: #f29178;
 
         }
+/*river guide CSS*/
 
+.guide{
+    width: 100%;
+    height: auto;
+    padding: 20px 20px;
+
+}
 
 
