--- a/css/small.css
+++ b/css/small.css
@@ -32,6 +32,7 @@ header nav{
     height: 70px;
     display: flex;
     justify-content: space-between;
+    background-color: rgb(11, 116, 116);
 }
 
 
@@ -68,7 +69,7 @@ nav {
 	padding: 0.75rem;
 	text-align: left;
 	text-decoration: none;
-	color: black;
+	color: white;
 }
 .navigation a:hover {
 	color: white;
