--- a/css/small.css
+++ b/css/small.css
@@ -104,6 +104,12 @@ header .textos h1{
 header .textos h2{
     font-size: 30px; 
     font-weight: 600;
+    background-color: lightcoral;
+    width: 200px;
+    height: 70px;
+    margin: auto;
+    padding: 18px;
+    border-radius: 10px;
 
 }
 
@@ -319,3 +325,12 @@ padding: 40px;
     transition: all .5s ease;
 }
 
+#book {
+    width: 200px;
+    height: 70px;
+    border-radius: 10px;
+    background: #ef767a;
+    font-size: 30px;
+    padding: 18px;
+   
+}
