--- a/css/small.css
+++ b/css/small.css
@@ -83,7 +83,7 @@ nav {
 */
 .responsive li {
     display: block;
-    background-color: tomato;
+    background-color: #06a77cd3;
 }
 
 /**CSS for textos and H1 and H2*/
