--- a/css/small.css
+++ b/css/small.css
@@ -141,6 +141,19 @@ padding: 40px;
     height: 100%;
 }
 
+.people img[data-src] {
+    filter: blur(0.2em);
+    
+  }
+  
+.people img {
+    filter: blur(0em);
+    transition: 3s;
+    padding: 5px;
+    width: 100%;
+    height: 100%;
+}
+
 .box1{
     width: 75%;
     height: auto;
